# ed25519

./: Cargo.toml  README.md
benches/: fq_bench.rs  fr_bench.rs  point_bench.rs
src/: fq.rs  fr.rs  lib.rs  util.rs
tests/: common.rs  eddsa.rs  fq_blackbox.rs  fr_blackbox.rs
