[package]
authors = []
description = "Implementation of the Ed25519 elliptic curve group"
name = "ed25519"
repository = "https://github.com/shuklaayush/ed25519"
version = "0.1.0"
edition = "2021"

[dependencies.bitvec]
version = "1"
default-features = false

[dependencies.ff]
version = "0.12"
default-features = false

[dependencies.group]
version = "0.12"
default-features = false

[dependencies.rand_core]
version = "0.6"
default-features = false

[dependencies.subtle]
version = "^2.2.1"
default-features = false

[dev-dependencies]
criterion = "0.3"

[dev-dependencies.rand_xorshift]
version = "0.3"
default-features = false

[features]
default = ["alloc", "bits"]
alloc = ["ff/alloc", "group/alloc"]
bits = ["ff/bits"]

[[bench]]
name = "fq_bench"
harness = false

[[bench]]
name = "fr_bench"
harness = false

[[bench]]
name = "point_bench"
harness = false
